# learning_materials

./: .gitignore  README.md  pyproject.toml
airflow/: requirements.txt
airflow/minio_scripts_example/: docker_compose.yml
airflow/minio_scripts_example/policy/: ro_policy.json
airflow_example/dags/: calc_stats_task_group_dag.py
airflow_example/minio_scripts_example/policy/: rw_policy.json
airflow_example/scripts/: init.sh
algorithms/: bfs_algorithms.py  dfs_algorithms.py  dijkstra_algorithm.py  searching_algorithms.py  sorting_algorithms.py
algorithms_and_data_structures/: binary_tree.py  graph_class.py  stack_variant_one.py
clickhouse_example/: docker-compose.yml
clickhouse_example/config/: clickhouse.xml  config.xml  users.xml
concurrent_computing/: asyncpg_example_cursor.py  asyncpg_example_pool.py  asyncpg_example_transactions.py  concurrent_futures_process.py  multithreading_example.py
concurrent_computing/aiohttp/: aiohttp_example.py
concurrent_computing/async_await/: async_await_example_1.py  async_await_example_2.py  async_queue.py  asyncio_echo_server.py
concurrent_computing/asyncpg/: asyncpg_example_cursor.py  asyncpg_example_pool.py  asyncpg_example_transactions.py
concurrent_computing/concurrent_futures/: concurrent_futures_process_run_tasks.py  concurrent_futures_thread.py
concurrent_computing/multiprocessing/: multiprocessing_example.py
concurrent_computing/threading/: multithreading_example.py  threading_hashing_password.py  threating_socket_web.py
data_structures/: dict_inheriting_datas.py  linked_list.py  queue.py  sorting_algorithms.py  stack_variant_two.py
design_patterns/: adapter.py  command.py  interface.py  iterator.py  map_reduce_method.py  observer.py  singleton.py  strategy.py  template_method.py
machine_learning/basic_algorithms/: __init__.py
machine_learning/basic_algorithms/adaline/: adaline.py  adaline_sgd.py
machine_learning/data/: iris_data.csv
machine_learning/nlp/: nlp_example.py
machine_learning/perceptron_algorithm/: __init__.py
machine_learning/scikit_learn/: sl_decision_tree.py  sl_knn.py  sl_logistic_regression.py  sl_perceptron.py  sl_random_forest.py  sl_svm.py
mlops/: .env.sample  Dockerfile.airflow  docker-compose.yml
mlops/dags/: processing_data_dag.py
mlops/utils/: s3_utils.py
parallel_programming/: multiprocessing_example.py  multithreading_example.py  token_bucket.py
rabbitmq/: .env.sample  docker-compose.yml
rabbitmq/config/: __init__.py  base_config.py  config.py
rabbitmq/default_pub_sub/: default_consumer.py  default_publisher.py
tests/: test_linked_list.py  test_queue.py  test_stack.py
(+104 files in other folders)
