[tool.poetry]
name = "learning-information"
version = "0.1.0"
description = "the project contains the information about data structures and algorithms"
authors = ["Dmitrii <dima12sik@yandex.ru>"]
readme = "README.md"
packages = [{include = "learning_information"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiohttp = "^3.9.3"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
