[tool.poetry]
name = "learning-information"
version = "0.1.0"
description = "the project contains the information about data structures and algorithms"
authors = ["Dmitrii <dima12sik@yandex.ru>"]
readme = "README.md"
packages = [{include = "learning_information"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiohttp = "^3.9.3"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
asyncpg = "^0.29.0"
numpy = "^2.1.2"
pika = "^1.3.2"
pika-stubs = "^0.1.3"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
