[tool.poetry]
name = "learning-information"
version = "0.1.0"
description = "the project contains the information about data structures and algorithms"
authors = ["Dmitrii <dima12sik@yandex.ru>"]
readme = "README.md"
packages = [{include = "learning_information"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
requests = "^2.31.0"
aiohttp = "^3.9.3"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
asyncpg = "^0.29.0"
numpy = "^2.1.2"
pika = "^1.3.2"
pika-stubs = "^0.1.3"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
beautifulsoup4 = "^4.13.4"
nltk = "^3.9.1"
mlxtend = "^0.23.4"
statsmodels = "^0.14.5"
opencv-python = "^4.12.0.88"
torch = {version = "^2.5.1", source = "torch-cu121"}
torchvision = {version = "^0.20.1", source = "torch-cu121"}
torchaudio = {version = "^2.5.1", source = "torch-cu121"}
gdown = "^5.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"


[[tool.poetry.source]]
name = "torch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
